--- a/playerDetails.html
+++ b/playerDetails.html
@@ -35,8 +35,11 @@
     <div id="player-details-wrapper">
       <div id="player-details-con" class="player-detail"></div>
     </div>
-    <footer>
-      <div><h4>IPL Cricket Teams</h4></div>
+    <footer class="foot-sty">
+      <div><h4>IPL 2022</h4></div>
+      <div><h4><a href="index.html">Home</a></h4></div>
+      <div><h4><a href="#Teams">Teams</a></h4></div>
+      <div><h4>	&#169 Lalith Kumar Erraboina </h4></div>
     </footer>
     <script src="playerDetails.js"></script>
   </body>
