--- a/createTeam.html
+++ b/createTeam.html
@@ -64,8 +64,11 @@
         <button type="submit">Add team</button>
       </form>
     </div>
-    <footer>
-      <div><h4>IPL Cricket Teams</h4></div>
+    <footer class="foot-sty">
+      <div><h4>IPL 2022</h4></div>
+      <div><h4><a href="index.html">Home</a></h4></div>
+      <div><h4><a href="#Teams">Teams</a></h4></div>
+      <div><h4>	&#169 Lalith Kumar Erraboina </h4></div>
     </footer>
     <script src="./createTeam.js"></script>
   </body>
