--- a/teams_details.html
+++ b/teams_details.html
@@ -64,8 +64,11 @@
     <div id="first-main">
       <div id="container_teams" class="team-class"></div>
     </div>
-    <footer>
-      <div><h4>IPL Cricket Teams</h4></div>
+    <footer class="foot-sty">
+      <div><h4>IPL 2022</h4></div>
+      <div><h4><a href="index.html">Home</a></h4></div>
+      <div><h4><a href="#Teams">Teams</a></h4></div>
+      <div><h4>	&#169 Lalith Kumar Erraboina </h4></div>
     </footer>
 
     <script src="./teams_details.js"></script>
